--- a/app/src/main/res/layout/delete_model.xml
+++ b/app/src/main/res/layout/delete_model.xml
@@ -9,7 +9,9 @@
     android:layout_height="wrap_content">
 
     <TextView
+        android:id="@+id/msg"
         android:paddingEnd="10dp"
+        android:paddingStart="0dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textSize="18sp"
