--- a/app/src/main/res/layout/rv_order.xml
+++ b/app/src/main/res/layout/rv_order.xml
@@ -74,7 +74,6 @@
         </LinearLayout>
 
         <LinearLayout
-            android:visibility="gone"
             android:id="@+id/orderMoreDetails"
             android:layout_marginHorizontal="15dp"
             android:paddingHorizontal="15dp"
@@ -135,6 +134,54 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 tools:itemCount="11" />
+
+            <androidx.cardview.widget.CardView
+                android:visibility="gone"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:elevation="10dp"
+                app:cardCornerRadius="10dp">
+
+                <TextView
+                    android:id="@+id/btnHold"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="@color/primary"
+                    android:padding="4dp"
+                    android:text="Hold"
+                    android:textAlignment="center"
+                    android:textColor="@color/white"
+                    android:textSize="17sp"
+                    android:textStyle="bold"
+                    tools:layout_editor_absoluteX="38dp"
+                    tools:layout_editor_absoluteY="320dp" />
+
+            </androidx.cardview.widget.CardView>
+
+            <androidx.cardview.widget.CardView
+                android:visibility="gone"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="5dp"
+                android:elevation="10dp"
+                app:cardCornerRadius="10dp">
+
+                <TextView
+                    android:id="@+id/btnComplete"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="@color/success"
+                    android:padding="4dp"
+                    android:text="Complete"
+                    android:textAlignment="center"
+                    android:textColor="@color/white"
+                    android:textSize="17sp"
+                    android:textStyle="bold"
+                    tools:layout_editor_absoluteX="38dp"
+                    tools:layout_editor_absoluteY="320dp" />
+
+            </androidx.cardview.widget.CardView>
 
         </LinearLayout>
 
