--- a/app/src/main/res/menu/nav_menu.xml
+++ b/app/src/main/res/menu/nav_menu.xml
@@ -24,11 +24,15 @@
         android:icon="@drawable/ic_profile"
         android:title="Profile"/>
     <item
-        android:id="@+id/menuReport"
+        android:id="@+id/menuManage"
         android:icon="@drawable/ic_settings"
         android:title="Manage"/>
     <item
         android:id="@+id/menuAuth"
         android:icon="@drawable/ic_login"
         android:title="Auth"/>
+    <item
+        android:id="@+id/menuSupport"
+        android:icon="@drawable/ic_support"
+        android:title="About"/>
 </menu>
