--- a/app/src/main/res/menu/nav_menu.xml
+++ b/app/src/main/res/menu/nav_menu.xml
@@ -34,5 +34,5 @@
     <item
         android:id="@+id/menuSupport"
         android:icon="@drawable/ic_support"
-        android:title="About"/>
+        android:title="Support"/>
 </menu>
